<resources>
    <string name="app_name">FitForge</string>*
    <string name="sign_up">Sign Up</string>
    <string name="make_your_first_step_towards_becoming_fit">Make your first step towards becoming fit</string>
    <string name="welcome">Welcome,</string>
    <string name="let_s_become_fit">Let\'s become fit!</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="password">Enter your password</string>
    <string name="login">Login</string>
    <string name="back">Back</string>
    <string name="fitforge">FitForge</string>
    <string name="todo">TODO</string>
    <string name="re_enter_password">Re-enter password</string>
    <string name="male">MALE</string>
    <string name="female">FEMALE</string>
    <string name="next">NEXT</string>
    <string name="female1">Female</string>
    <string name="next1">next</string>
    <string name="full_name">Full Name</string>
    <string name="title_activity_navdraw">navdraw</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="training">Training</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="switch_account">Switch Account</string>
    <string name="custom">Custom</string>
    <string name="muscle_gain">Muscle Gain</string>
    <string name="weight_loss">Weight Loss</string>
    <string name="become_fit">Become Fit</string>
    <string name="what_is_your_goal">What is your goal?</string>
    <string name="exercises1">Exercises</string>
    <string name="Chest">Chest\n</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Profile">Profile</string>


    <string name="error_field_required">This field is required</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">Password must be at least 8 characters</string>

    <string name="get_started_today">Get started today</string>

</resources>