<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:contentDescription="@string/todo"
        android:scaleType="fitXY"
        android:src="@drawable/homepage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="248dp"
        android:layout_height="84dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="130dp"
        android:fontFamily="@font/lustria"
        android:text="@string/fitforge"
        android:textColor="#FBE8B6"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/logbutt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/logbutt"
        android:layout_width="134dp"
        android:layout_height="83dp"
        android:layout_marginBottom="80dp"
        android:background="@drawable/for_buttons"
        android:gravity="center"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="#050505"
        android:textSize="20sp"
        android:typeface="serif"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="@+id/button2"
        app:layout_constraintStart_toStartOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:backgroundTint="@null"/>


    <Button
        android:id="@+id/button2"
        android:layout_width="134dp"
        android:layout_height="83dp"
        android:layout_marginBottom="121dp"
        android:background="@drawable/for_buttons"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textColor="#050505"
        android:textSize="20sp"
        android:typeface="serif"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@id/logbutt"
        android:backgroundTint="@null"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="94dp"
        android:text="@string/make_your_first_step_towards_becoming_fit"
        android:textColor="#ffffff"
        android:textSize="16sp"
        android:typeface="serif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />


</androidx.constraintlayout.widget.ConstraintLayout>
